feat(core): add DLLoader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,12 @@ cmake_minimum_required(VERSION 3.10)
 
 project(arcade)
 
-set(CMAKE_CXX_STANDARD 20)
+set( CMAKE_CXX_STANDARD 20)
+
+set( CMAKE_CXX_FLAGS "-Wall -Wpedantic -Wextra -g3 " )
 
 set(SRCS
+    src/Core.cpp
     src/main.cpp
 )
 
