--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set( CMAKE_CXX_STANDARD 20)
 set( CMAKE_CXX_FLAGS "-Wall -Wpedantic -Wextra -g3 " )
 
 set(SRCS
+    src/Utils/FileParser.cpp
+    src/Error.cpp
     src/Core.cpp
     src/main.cpp
 )
