--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set( CMAKE_CXX_FLAGS "-Wall -Wpedantic -Wextra -g3 " )
 
 set(SRCS
     src/Utils/FileParser.cpp
+    src/Utils/HighscoreHandler.cpp
     src/Error.cpp
     src/Core.cpp
     src/Object.cpp
