--- a/lib/graphics/ncurses/CMakeLists.txt
+++ b/lib/graphics/ncurses/CMakeLists.txt
@@ -4,8 +4,12 @@ project(arcade)
 
 set(CMAKE_CXX_STANDARD 20)
 
+set( CMAKE_CXX_FLAGS " -lncurses ")
+
 set(SRCS
     ./Ncurses.cpp
+    ./NcursesDisplay.cpp
+    ${CMAKE_SOURCE_DIR}/src/Object.cpp
 )
 
 find_package(Curses REQUIRED)
