--- a/lib/games/menu/CMakeLists.txt
+++ b/lib/games/menu/CMakeLists.txt
@@ -23,11 +23,11 @@ add_library(menu SHARED
 
 set_target_properties(menu PROPERTIES
     PREFIX "arcade_"
-    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/"
+    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
 )
 
 target_include_directories(menu PRIVATE
-    ${CMAKE_BINARY_DIR}/lib/games/menu/includes
-    ${CMAKE_BINARY_DIR}/lib/games/includes
-    ${CMAKE_BINARY_DIR}/src/includes
+    ${CMAKE_SOURCE_DIR}/lib/games/menu/includes
+    ${CMAKE_SOURCE_DIR}/lib/games/includes
+    ${CMAKE_SOURCE_DIR}/src/includes
 )
