--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,13 +17,13 @@ set(SRCS
 )
 
 set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES
-    ${CMAKE_BINARY_DIR}/arcade
-    ${CMAKE_BINARY_DIR}/lib/arcade_ncurses.so
-    ${CMAKE_BINARY_DIR}/lib/arcade_sfml.so
-    ${CMAKE_BINARY_DIR}/lib/arcade_sld2.so
-    ${CMAKE_BINARY_DIR}/lib/arcade_nibbler.so
-    ${CMAKE_BINARY_DIR}/lib/arcade_pacman.so
-    ${CMAKE_BINARY_DIR}/lib/arcade_menu.so
+    ${CMAKE_SOURCE_DIR}/arcade
+    ${CMAKE_SOURCE_DIR}/lib/arcade_ncurses.so
+    ${CMAKE_SOURCE_DIR}/lib/arcade_sfml.so
+    ${CMAKE_SOURCE_DIR}/lib/arcade_sld2.so
+    ${CMAKE_SOURCE_DIR}/lib/arcade_nibbler.so
+    ${CMAKE_SOURCE_DIR}/lib/arcade_pacman.so
+    ${CMAKE_SOURCE_DIR}/lib/arcade_menu.so
 )
 
 add_executable(arcade ${SRCS})
@@ -39,10 +39,14 @@ add_subdirectory(lib/graphics/sdl2)
 target_link_libraries(arcade PUBLIC dl)
 
 target_include_directories(arcade PUBLIC
-    src/includes
-    lib/graphics/includes
-    lib/games/includes
-    lib/games/menu/includes
+    ${CMAKE_SOURCE_DIR}/src/includes
+    ${CMAKE_SOURCE_DIR}/lib/graphics/includes
+    ${CMAKE_SOURCE_DIR}/lib/games/includes
+    ${CMAKE_SOURCE_DIR}/lib/games/menu/includes
 )
 
 add_dependencies(arcade ncurses sfml sdl2 pacman centipede menu)
+
+if(NOT ${CMAKE_SOURCE_DIR} MATCHES ${CMAKE_BINARY_DIR})
+    add_custom_command(TARGET arcade COMMAND cp ${CMAKE_BINARY_DIR}/arcade ${CMAKE_SOURCE_DIR}/arcade)
+endif()
