--- a/lib/games/pacman/CMakeLists.txt
+++ b/lib/games/pacman/CMakeLists.txt
@@ -14,11 +14,11 @@ add_library(pacman SHARED
 
 set_target_properties(pacman PROPERTIES
     PREFIX "arcade_"
-    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/"
+    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/"
 )
 
 target_include_directories(pacman PRIVATE
-    ${CMAKE_BINARY_DIR}/lib/games/pacman/includes
-    ${CMAKE_BINARY_DIR}/lib/games/includes
-    ${CMAKE_BINARY_DIR}/src/includes
+    ${CMAKE_SOURCE_DIR}/lib/games/pacman/includes
+    ${CMAKE_SOURCE_DIR}/lib/games/includes
+    ${CMAKE_SOURCE_DIR}/src/includes
 )
