--- a/lib/games/centipede/CMakeLists.txt
+++ b/lib/games/centipede/CMakeLists.txt
@@ -5,8 +5,9 @@ project(arcade)
 set(CMAKE_CXX_STANDARD 20)
 
 set(SRCS
+    ./CentipedeGame.cpp
     ./Centipede.cpp
-    ./mushroom.cpp
+    ./Mushroom.cpp
     ./Snake.cpp
     ./Player.cpp
     ${CMAKE_SOURCE_DIR}/lib/games/AGame.cpp
